--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password: root
 
 spring.jpa.hibernate.ddl-auto=update
 spring.devtools.restart.exclude=static/**,templates/**
-
+#done by aseel
 # Show or not log for each sql query
 spring.jpa.show-sql = true
 
