--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,8 @@ spring.datasource.password: root
 
 spring.jpa.hibernate.ddl-auto=update
 spring.devtools.restart.exclude=static/**,templates/**
-#done by aseel
+#done by aseel add walid
+#done by aseel add walid
 # Show or not log for each sql query
 spring.jpa.show-sql = true
 
@@ -15,6 +16,12 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 # Use spring.jpa.properties.* for Hibernate native properties (the prefix is
 # stripped before adding them to the entity manager)
+
+
+
+
+
+
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
