--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,4 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.database: MYSQL
 spring.messages.basename: i18n/messages
 rememberMe.privateKey: some_secret_word
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
