--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #logging.level.org.h2.server: DEBUG
 # Database
-spring.datasource.url: jdbc:mysql://192.168.8.100:3306/stm
+spring.datasource.url: jdbc:mysql://127.0.0.1:3306/stm?useSSL=false
 spring.datasource.username: root
 spring.datasource.password: root
 
